--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 *{
   margin: 0;
   padding: 0;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  
+  /* font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+   */
 }
