--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -1,12 +1,3 @@
-/* .form{
-    margin-top:15%;
-    margin-left: 30%;
-    
+.form{
+    margin-top: 50px;
 }
-
-.form-label{
-    font-size: 20px;
-    text-align: justify;
-    text-decoration: underline;
-    display: block;
-} */
